# OpsPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Roadmap_AI_Engineer.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64bc1468d115_create_franchisor_tenant_user_access_.py
backend/app/api/dependencies/: database.py
backend/app/database/: session.py
backend/app/models/: __init__.py  enums.py  franchisor.py  lead.py  tenant.py  user.py  user_tenant_access.py
docs/: architecture_v0.md  authorization_rules.md  data_model_v0.md  db_schema.md  gcp_setup.md  problem_brief.md  success_metrics_v1.md
